--- a/.github/workflows/build-example-corneish_zen-custom.yml
+++ b/.github/workflows/build-example-corneish_zen-custom.yml
@@ -1,7 +1,7 @@
 # Copyright 2023 Manna Harbour
 # https://github.com/manna-harbour/miryoku
 
-name: 'Build Example Corne-ish Zen Custom'
+name: 'Build Corne-ish Zen Firmware'
 on: workflow_dispatch
 jobs:
   build:
